--- a/Registration page/Forgotpassword.html
+++ b/Registration page/Forgotpassword.html
@@ -4,6 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Request new Password</title>
+    <style>
+        body {
+            background-color: lightgray;
+            font-family: Arial, sans-serif;
+            color: darkblue;
+        }
+
+        h1 {
+            color: darkgreen;
+        }
+
+        p {
+            color: darkred;
+        }
+
+        label {
+            display: block;
+            margin-top: 10px;
+            color: darkblue;
+        }
+
+        input {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
+    </style>
 </head>
 <body>
     <h1>Reset Your Password</h1>
