--- a/Registration page/index.html
+++ b/Registration page/index.html
@@ -4,19 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <style>
+        body {
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            background-color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .login-container {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px black;
+            overflow: hidden;
+            width: 300px;
+            text-align: center;
+        }
+
+        h1 {
+            color: black;
+            margin: 20px 0;
+        }
+
+        form {
+            padding: 20px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            color: green;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+            border: 1px solid white;
+            border-radius: 4px;
+            margin-bottom: 12px;
+            transition: border-color 0.3s;
+        }
+
+        input:focus {
+            border-color: blueviolet;
+        }
+
+        a {
+            text-decoration: none;
+            color: black;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        input[type="button"] {
+            background-color: slateblue;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        input[type="button"]:hover {
+            background-color: blue;
+        }
+
+        p {
+            margin-top: 20px;
+            color: black;
+        }
+    </style>
 </head>
 <body>
-    <h1>Sign in to continue</h1>
-    <form action="">
-        <label for="email">Email:</label>
-        <input type="email" name="email" id="email" required = "required" aria-required="true" ><br>
-        <label for="pwd">Password:</label>
-        <input type="password" name="pwd" id="pwd" required = "required" aria-required="true" ><br>
-        <a href="Forgotpassword.html"><p>Forgot your password?</p></a>
-        <input type="button" value="sign in"><br>
-        <p>new user?</p><br>
-        <a href="registration.html"><input type="button" value="create account" ></a>
-    </form>
-   
+    <div class="login-container">
+        <h1>Sign in to continue</h1>
+        <form action="">
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" required="required" aria-required="true"><br>
+            <label for="pwd">Password:</label>
+            <input type="password" name="pwd" id="pwd" required="required" aria-required="true"><br>
+            <a href="Forgotpassword.html">Forgot your password?</a><br>
+            <br><input type="button" value="Sign In"><br>
+            <p>New user?</p>
+            <a href="registration.html"><input type="button" value="Create Account"></a>
+        </form>
+    </div>
 </body>
 </html>
