three html files css added

--- a/Registration page/index.html
+++ b/Registration page/index.html
@@ -87,9 +87,9 @@
         <h1>Sign in to continue</h1>
         <form action="">
             <label for="email">Email:</label>
-            <input type="email" name="email" id="email" required="required" aria-required="true"><br>
+            <input type="email" name="email" id="email" required><br>
             <label for="pwd">Password:</label>
-            <input type="password" name="pwd" id="pwd" required="required" aria-required="true"><br>
+            <input type="password" name="pwd" id="pwd" required><br>
             <a href="Forgotpassword.html">Forgot your password?</a><br>
             <br><input type="button" value="Sign In"><br>
             <p>New user?</p>
