--- a/Registration page/registration.html
+++ b/Registration page/registration.html
@@ -24,12 +24,35 @@
         }
 
         label {
-            display: block;
             margin-top: 10px;
             color: darkgreen;
         }
+        
+        input[type="text"] {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
 
-        input {
+        input[type="password"] {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
+
+        input[type="email"] {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+        }
+         
+        input[type="date"] {
             width: 100%;
             padding: 8px;
             margin-top: 5px;
@@ -64,18 +87,20 @@
         <label for="pwd">Password:</label>
         <input type="password" name="pwd" id="pwd" required="required"><br>
 
+        <label for="pwd">Confirm Password:</label>
+        <input type="password" name="cpwd" id="cpwd" required="required"><br>
+
         <label for="dob">Date of birth:</label>
         <input type="date" name="dob" id="dob" required="required"><br>
 
         <label for="gender">Gender:</label><br>
-        <label for="male">Male</label>
         <input type="radio" name="gender" id="male" value="Male">
+        <label for="male">Male</label><br>
 
-        <label for="female">Female</label>
         <input type="radio" name="gender" id="female" value="Female">
-
-        <label for="pns">Prefer not to say</label>
+        <label for="female">Female</label><br>
         <input type="radio" name="gender" id="pns" value="Prefer not to say">
+        <label for="pns">Prefer not to say</label><br><br>
 
         <input type="submit" value="Register">
         <p>Already have an account? <a href="index.html">Sign in</a></p>
