css updated file

--- a/Registration page/registration.html
+++ b/Registration page/registration.html
@@ -27,24 +27,8 @@
             margin-top: 10px;
             color: darkgreen;
         }
-        
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
 
-        input[type="password"] {
-            width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-
-        input[type="email"] {
+        input[type="email"],input[type="date"],input[type="password"],input[type="text"] {
             width: 100%;
             padding: 8px;
             margin-top: 5px;
@@ -52,14 +36,6 @@
             box-sizing: border-box;
         }
          
-        input[type="date"] {
-            width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-
         input[type="submit"] {
             background-color: darkblue;
             color: white;
