form validation added , css modified

--- a/Registration page/Forgotpassword.html
+++ b/Registration page/Forgotpassword.html
@@ -6,38 +6,75 @@
     <title>Request new Password</title>
     <style>
         body {
-            background-color: lightgray;
             font-family: Arial, sans-serif;
-            color: darkblue;
+            background-color: lightgray;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
         }
 
-        h1 {
-            color: darkgreen;
+        .reset-container {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            width: 300px;
+            padding: 20px;
+            text-align: center;
         }
 
-        p {
-            color: darkred;
+        .reset-container p {
+            margin-bottom: 20px; /* Adjust margin-bottom as needed */
         }
 
         label {
             display: block;
-            margin-top: 10px;
-            color: darkblue;
+            margin-bottom: 8px;
+            text-align: center;
         }
 
         input {
-            width: 100%;
-            padding: 8px;
+            width: calc(100% - 20px);
+            padding: 10px;
             margin-top: 5px;
             margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            transition: border-color 0.3s;
             box-sizing: border-box;
+        }
+
+        input:focus {
+            border-color: blueviolet;
+        }
+
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: darkblue;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: blue;
         }
     </style>
 </head>
 <body>
-    <h1>Reset Your Password</h1>
-    <p>Enter your email and a secure link to reset your password will be sent shortly</p>
-    <label for="pwdreset">Email:</label><br>
-    <input type="email" name="pwdreset" id="pwdreset">
+    <div class="reset-container">
+        <h2>Reset Your Password</h2>
+        <p>Enter your email and a secure link to reset your password will be sent shortly</p>
+        <form action="">
+            <label for="pwdreset">Email:</label>
+            <input type="email" name="pwdreset" id="pwdreset" required>
+            <button>Submit</button>
+        </form>
+    </div>
 </body>
 </html>
