home page and films page created

--- a/Registration page/Forgotpassword.html
+++ b/Registration page/Forgotpassword.html
@@ -26,7 +26,7 @@
         }
 
         .reset-container p {
-            margin-bottom: 20px; /* Adjust margin-bottom as needed */
+            margin-bottom: 20px; 
         }
 
         label {
