--- a/Registration page/registration.html
+++ b/Registration page/registration.html
@@ -90,7 +90,7 @@
       <label for="pns">Prefer not to say</label><br /><br />
 
       <input type="submit" value="Register" />
-      <p>Already have an account? <a href="index.html">Sign in</a></p>
+      <p>Already have an account? <a href="LoginPage.html">Sign in</a></p>
     </form>
 
     <script>
